# ClipDock

./: .gitignore  AGENTS.md  Package.swift  README.en.md  README.md  index.html  site.webmanifest  verification.md  version.properties
.codex/: context-scan.json  operations-log.md  paste-pin-research.md  paste-pinboard-management-research-2026-05-11.md  paste-pinboard-replica-architecture-2026-05-12.md  paste-pinboard-ui-research-2026-05-12.md  pinboard-full-mvc-architecture-2026-05-11.md  pinboard-mvc-design.md  review-report.md  testing.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: build-release-artifacts.yml
Android/: settings.gradle.kts
Android/app/: build.gradle.kts
Android/docs/: server-interface-ui-alignment-v2.md  ui-design-review-v1.md  ui-design-review-v2.md  ui-design-review-v3-image2.md  ui-design-review-v4-history-redesign.md  ui-design-review-v5-history-thumbnails.md  ui-design.md
Android/gradle/: libs.versions.toml
Android/qa/: mobile-v4-pixel-config.json  mobile-v4-pixel-masks.json  mobile-v4-pixel-requirements.txt
Android/rust/clipdock_p2p_jni/: Cargo.toml
Android/rust/clipdock_p2p_jni/src/: lib.rs
Android/scripts/: mobile_v4_capture_android.py  mobile_v4_pixel_diff.py  mobile_v4_reference_capture.py  mobile_v4_validate_web_source.py
Android/ui-web/: index.html
Server/: Cargo.toml  README.md
Server/docs/: protocol-v1.md  protocol-v2.md
Server/scripts/: package-server.sh
Server/src/: api.rs  assets.rs  auth.rs  config.rs  db.rs  errors.rs  events.rs  hashes.rs  lib.rs  lifecycle.rs  main.rs  migrations.rs  p2p.rs  realtime.rs
Server/tests/: api_sync.rs  assets.rs  auth.rs  db.rs  lifecycle.rs  p2p.rs  realtime.rs  sync_contract.rs
Server/tests/common/: mod.rs
Server/tools/: sync_flow_probe.py
Sources/ClipDock/: AppCommands.swift  AppRuntime.swift  AppUpdatePromptWindow.swift  ApplicationRuntime.swift  ClipDockTheme.swift  ClipboardAssetProviders.swift  ClipboardMonitoring.swift  CopyCompletionHUDController.swift  CopySoundFeedback.swift  FloatingPanelController.swift  LinkMetadataCoordinator.swift  Localization.swift  PanelCardSupport.swift  PanelItemCardRenderer.swift  PanelItemCollectionSurface.swift  PanelPreviewUI.swift  PanelRuntimeAction.swift  PanelUIPrimitives.swift  PerformanceInstrumentation.swift  PreferencesUI.swift  QASupport.swift  SourceTracking.swift  UpdateChecker.swift  main.swift
Sources/ClipShelf/: AppCommands.swift  AppRuntime.swift  ApplicationRuntime.swift  ClipShelfTheme.swift  ClipboardAssetProviders.swift  FloatingPanelController.swift  LinkMetadataCoordinator.swift  PanelCardSupport.swift  PanelItemCardRenderer.swift  PanelPreviewUI.swift  PanelRuntimeAction.swift  PanelUIPrimitives.swift  PerformanceInstrumentation.swift  PreferencesUI.swift  QASupport.swift  main.swift
Sources/ClipboardPanelApp/: ClipboardCaptureCoordinator.swift  ClipboardColorValue.swift  ClipboardFilePreviewResolver.swift  ClipboardFileVisualClassifier.swift  ClipboardIgnoreRuleEvaluator.swift  ClipboardLinkDetector.swift  ClipboardListCoordinator.swift  ClipboardOriginalImagePathResolver.swift  ClipboardPastePayloadPlanner.swift  ClipboardPreviewContentPlanner.swift  KeyboardShortcutPresenter.swift  LinkDisplayURLFormatter.swift  Localization.swift  PanelContentController.swift  (+14 more)
Windows/: README.md  index.html  package-lock.json  package.json  vite.config.ts
Windows/src-tauri/: Cargo.toml  tauri.conf.json
Windows/src-tauri/capabilities/: default.json
Windows/src-tauri/src/: clipboard_bridge.rs  lib.rs  main.rs  native_assets.rs
docs/: CNAME  architecture-review.md  architecture.md  delivery-workflow.md  feature-qa-log.md  final-refactor-plan-2026-05-10.md  index.html  mvc-refactor-roadmap-2026-05-10.md  open-clipdock.html  paste-color-item-reverse-engineering.md  paste-like-link-card-architecture.md  paste-like-link-card-macos-dev-review.md  paste-like-link-card-qa-review.md  paste-link-preview-reverse-engineering.md  paste-panel-animation-focus-dimming-reverse-engineering.md  paste-panel-data-loading-reuse-reverse-engineering.md  paste-panel-item-reverse-engineering.md  paste-panel-scroll-deep-reverse-engineering.md  paste-search-panel-reverse-engineering.md  paste-text-item-reverse-engineering.md  qa-release-test-report-2026-05-17.md  refactor-plan-2026-05-10.md  release-architecture-final-audit-2026-05-17.md  release.md  site.webmanifest  telegram-notifications.md  ui-design.md  ui-qa-review.md
macOS/: .gitignore  AGENTS.md  Package.swift  README.en.md  README.md
macOS/rust/crates/clipboard_core_ffi/: Cargo.toml  build.rs
macOS/rust/crates/clipboard_core_ffi/src/: lib.rs  p2p_node.rs
rust/: Cargo.toml
rust/crates/clipboard_core/: Cargo.toml
rust/crates/clipboard_core/src/: domain.rs  error.rs  lib.rs  migrations.rs  storage.rs  time.rs
rust/crates/clipboard_core/src/storage/: capture.rs  maintenance.rs  pending_images.rs  preferences.rs  queries.rs  source_apps.rs  support.rs  tests.rs
rust/crates/clipboard_core_ffi/: Cargo.toml
rust/crates/clipboard_core_ffi/src/: lib.rs
scripts/: app-metadata.sh  ask-telegram-and-wait.sh  build-rust-core.sh  package-macos-app.sh  profile-panel-presentation.sh  release-macos.sh  run-with-telegram-notify.sh  send-telegram-message.sh  wait-for-telegram-reply.sh
(+300 files in other folders)
