[package]
name = "clipdock-sync-server"
version = "0.1.8"
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
async-trait = "0.1"
axum = "0.7"
base64 = "0.22"
bytes = "1"
hex = "0.4"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio-rustls", "sqlite"] }
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "fs"] }
tower = { version = "0.5", features = ["util"] }

[dev-dependencies]
http-body-util = "0.1"
tempfile = "3"
