[package]
name = "clipdock-sync-server"
version = "0.1.9"
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.7", features = ["ws"] }
base64 = "0.22"
blake3 = "1"
bytes = "1"
clipdock_sync_contract = { path = "../shared/rust/clipdock_sync_contract" }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
hex = "0.4"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio-rustls", "sqlite"] }
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "fs", "sync", "time"] }
tower = { version = "0.5", features = ["util"] }
futures-util = "0.3"

[dev-dependencies]
http-body-util = "0.1"
tempfile = "3"
tokio-tungstenite = "0.24"
