[package]
name = "clipdock_p2p_jni"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0"
iroh = "0.35.0"
iroh-blobs = "0.35.0"
jni = "0.21"
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
socket2 = { version = "0.5.10", features = ["all"] }
tokio = { version = "1.40", features = ["rt-multi-thread", "time"] }

# Keep the dependency graph compatible with the Rust 1.85 toolchain used by
# the current macOS/server workspace.
getrandom = "=0.3.3"
icu_collections = "=2.0.0"
icu_locale_core = "=2.0.0"
icu_normalizer = "=2.0.0"
icu_normalizer_data = "=2.0.0"
icu_properties = "=2.0.0"
icu_properties_data = "=2.0.0"
icu_provider = "=2.0.0"
idna_adapter = "=1.1.0"
time = "=0.3.41"
wasi = "=0.14.2"
writeable = { version = "=0.6.3", features = ["alloc"] }

[dev-dependencies]
tempfile = "3.10"
