[package]
name = "clipboard_core_ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
clipboard_core = { path = "../clipboard_core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
swift-bridge = "0.1.59"
webp = { version = "0.3.1", default-features = false }

[build-dependencies]
swift-bridge-build = "0.1.59"
