[package]
name = "clipboard_core_ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
anyhow = "1.0"
blake3 = "1"
clipboard_core = { path = "../clipboard_core" }
clipdock_thumbnail_codec = { path = "../../../../shared/rust/clipdock_thumbnail_codec" }
iroh = "0.35.0"
iroh-blobs = "0.35.0"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
socket2 = { version = "0.5.10", features = ["all"] }
swift-bridge = "0.1.59"
tokio = { version = "1.0", features = ["rt-multi-thread", "time"] }
resvg = { version = "0.45.1", default-features = false }
webp = { version = "0.3.1", default-features = false }

[build-dependencies]
swift-bridge-build = "0.1.59"

[dev-dependencies]
tempfile = "3.21"
